.husky/force-app/main/default/objects/Point_Master__c/Point_Master__c.object-meta.xml
<CustomObject>
    <label>Point Master</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Point Master id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PointMasters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>