.husky/force-app/main/default/objects/Point_Master__c/fields/Add_Id__c.field-meta.xml
<CustomField>
    <fullName>Add_Id__c</fullName>
    <label>Add Id</label>
    <referenceTo>Add__c</referenceTo>
    <relationshipLabel>PointMasters</relationshipLabel>
    <relationshipName>PointMasters</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>