.husky/force-app/main/default/objects/Point_Master__c/fields/Credit_Debit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Debit__c</fullName>
    <label>Credit Debit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>