.husky/force-app/main/default/objects/Point_Master__c/fields/Redimtion__c.field-meta.xml
<CustomField>
    <fullName>Redimtion__c</fullName>
    <label>Redemption</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>